# hook_tasks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  celery_start.sh  cmd.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt  sample.env  setup.cfg
.github/workflows/: docker-image.yml  pytest.yml
hook_tasks/: api_clients.py  app.py  cache_clients.py  celeryconfig.py  cli.py  config.py  configs.py  helpers.py  periodic_canvas.py
hook_tasks/SourceChecksum/: abcs.py  delay_checksum.py  product_announcement_checksum.py  shipment_checksum.py  spider_config.py
hook_tasks/domains/sns_post/: entitles.py
hook_tasks/domains/sns_post/discord/: create_embed.py  create_embed_usecase.py  entities.py  localize_embed.py  localize_embed_usecase.py  set_embed_tracking_footer.py
hook_tasks/domains/sns_post/plurk/: create_plurk.py  create_plurk_usecase.py  entities.py  format_helper.py
hook_tasks/domains/source_checksum/: announcement_check_use_case.py  announcement_check_usecase.py  entities.py
hook_tasks/domains/source_checksum/entities/: source_checksum.py
hook_tasks/domains/source_checksum/repositories/: checksum_repository.py  source_checksum_repository.py
hook_tasks/domains/source_checksum/usecases/: announcement_check.py
hook_tasks/domains/spiders/: scrapy_spider.py  scrapy_spider_use_case.py  scrapy_spider_usecase.py  spider_config.py
hook_tasks/domains/spiders/usecases/: scrapy_spider.py
hook_tasks/infras/cache/release_embed/: release_embed_repository.py
hook_tasks/infras/persistance/discord_webhook/: discord_webhook_repository.py
hook_tasks/on_demand/: tasks.py
hook_tasks/periodic/: tasks.py
hook_tasks/tasks/common/: tasks.py
hook_tasks/tasks/new_release_check/: tasks.py
tests/: conftest.py  test_on_demand_tasks.py  test_periodic_tasks.py
tests/TestSourceChecksum/: base_test.py  test_delay_checksum.py  test_product_announcement_checksum.py  test_shipment_checksum.py  test_spider_config.py
tests/test_domains/test_source_checksum/: test_souce_checksum_use_cases.py  test_souce_checksum_usecases.py
tests/test_domains/test_spiders/: test_spiders_use_cases.py  test_spiders_usecases.py
tests/test_tasks/: test_new_release_check_tasks.py  test_periodic_tasks.py
tests/test_tasks/mock_repositories/: mock_source_checksum_repository.py
(+57 files in other folders)
