[tool.poetry]
name = "hook_tasks"
version = "0.1.0"
description = ""
authors = ["Elton Chou <plscd748@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.1.2"
figure-hook = {git = "https://github.com/FigureHook/figure_hook", branch = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
