[tool.poetry]
name = "hook_tasks"
version = "0.0.6"
description = ""
authors = ["Elton Chou <plscd748@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.1.2"
click = "^8.0.3"
figure-parser = { git = "https://github.com/FigureHook/figure_parser.git", rev = "main" }
figure-hook-client = { git = "https://github.com/FigureHook/hook-api-client.git", subdirectory = "python/figure-hook-client" }
"discord.py" = "^2.0.1"
plurk-oauth = "^0.9.2"
scrapyd-client = "^1.2.2"
Babel = "^2.10.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pydantic-factories = "^1.12.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
Faker = "^9.8.0"
coverage = { extras = ["toml"], version = "^6.5.0" }

[tool.poetry.scripts]
hooktasks = "hook_tasks.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -q --ignore=temp/"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
omit = ["*/site-packages/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "def __repr__",
    "@abstract",
    "@overload",
    "pass",
    "raise NotImplementedError",
    "pragma: no cover",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
